# fallout4-fallui-unread-notes

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  xmake.lua
.claude/: settings.json
.claude/hooks/: check-submodule-review.sh
src/: main.cpp  pch.h  version.rc.in
tools/: addrlib_lookup.py
